--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,7 +14,7 @@
     <div id="navbar">
         <img class="logo" src="logo.png" alt="logo">
         <form action="/" method="post">
-            <input type="search" name="Superhero" id="" placeholder="Search..">
+            <input type="search" name="Superhero" required placeholder="Search..">
             <button value="submit" >🔍</button>
         </form>
     </div>
